syntax = "proto3";

package lzy.proto.priv.v1;

import "lzy/proto/v1/lzy-iam.proto";

option java_outer_classname = "LSS";
option java_package = "ai.lzy.priv.v1";

service LzySubjectService {
  rpc CreateSubject (CreateSubjectRequest) returns (lzy.proto.v1.Subject);

  rpc RemoveSubject (RemoveSubjectRequest) returns (RemoveSubjectResponse);

  rpc AddCredentials (AddCredentialsRequest) returns (AddCredentialsResponse);

  rpc RemoveCredentials (RemoveCredentialsRequest) returns (RemoveCredentialsResponse);
}

message CreateSubjectRequest {
  string name = 1;
  string auth_provider = 2;
  string provider_subject_id = 3;
}

message RemoveSubjectRequest {
  lzy.proto.v1.Subject subject = 1;
}

message RemoveSubjectResponse {
}

message AddCredentialsRequest {
  lzy.proto.v1.Subject subject = 1;
  lzy.proto.v1.Credentials credentials = 2;
}

message AddCredentialsResponse {
}

message RemoveCredentialsRequest {
  lzy.proto.v1.Subject subject = 1;
  string credentials_name = 2;
}

message RemoveCredentialsResponse {
}
